--- a/APIEcommerce/detailProduct.css
+++ b/APIEcommerce/detailProduct.css
@@ -152,3 +152,16 @@ a:hover {
   text-align: start;
   color: gray;
 }
+
+.container-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 30px 0px 30px;
+  margin-top: 3rem;
+  align-items: center;
+  height: 4rem;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: MidnightBlue;
+  color: white;
+}
