--- a/ApiAnimes/animes.css
+++ b/ApiAnimes/animes.css
@@ -43,23 +43,26 @@ body {
 }
 
 .container-modal {
-  display: none;
+  display: flex;
   width: 100%;
   height: 100%;
   position: absolute;
   inset: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal {
-  z-index: 1;
-  /* left: 10%; */
   position: relative;
-  width: 70%;
-  height: 90%;
-  margin: 1.5rem auto;
+  width: 70vw;
+  height: 90vh;
+  max-height: 900px;
   background-color: WhiteSmoke;
   border-radius: 12px;
   border: 2px solid black;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .overlay {
   position: fixed;
@@ -77,11 +80,9 @@ body {
 }
 .header-modal {
   color: black;
-  width: 97%;
-  height: 3rem;
   display: flex;
   justify-content: space-between;
-  padding: 1rem 0rem 0 1rem;
+  padding: 1rem 1rem 0;
 }
 .header-modal div h1 {
   font-size: 28px;
@@ -105,8 +106,9 @@ body {
 .contents-modal {
   display: flex;
   gap: 2rem;
+  min-height: 0;
 }
-.contents-modal div {
+.contents-modal > div {
   justify-content: center;
   display: flex;
   flex-direction: column;
@@ -123,7 +125,8 @@ body {
   display: flex;
   gap: 1rem;
   margin: 1rem auto;
-  overflow: scroll;
+  overflow-y: auto;
+  flex-direction: column;
 }
 
 .synopsis-modal b {
